# gtk-hello-again

./: meson.build
data/: hello-again.appdata.xml  hello-again.desktop  hello-again.desktop.in
po/: com.github.GoldenGladier.gtk-hello-again.pot  de.po  es.po
src/: Application.vala
